updated css for custom-corousal to prevent extra space, made height relative over fixed

--- a/public/scss/_cutomnav.scss
+++ b/public/scss/_cutomnav.scss
@@ -21,14 +21,14 @@
 
 .custom-carousel {
   width: 100%; /* Adjust width as needed */
-  height: 650px; /* Fixed height for the carousel */
+  height: 100%; /* Relative height for the carousel */
   max-width: 100%;
   overflow: hidden; /* Hide overflow to maintain fixed size */
 }
 
 .custom-carousel .carousel-item img {
   width: 100%;
-  height: 650px;
+  height:500px;
   object-fit:cover; /* Ensure the image covers the entire container */
 }
 .d-block{
